fix(style): Make scrollbar colors match MDN

--- a/editor/css/editor-libs/common.css
+++ b/editor/css/editor-libs/common.css
@@ -132,6 +132,7 @@
   --text-primary-green: #007936;
   --text-primary-blue: #0069c2;
   --text-primary-yellow: #746a00;
+  color-scheme: light;
 }
 
 .theme-dark {
@@ -222,6 +223,7 @@
   --text-primary-green: #00d061;
   --text-primary-blue: #8cb4ff;
   --text-primary-yellow: #c7b700;
+  color-scheme: dark;
 }
 
 @media (prefers-color-scheme: light) {
@@ -341,6 +343,7 @@
     --text-primary-green: #007936;
     --text-primary-blue: #0069c2;
     --text-primary-yellow: #746a00;
+    color-scheme: light;
   }
 }
 
@@ -434,6 +437,7 @@
     --text-primary-green: #00d061;
     --text-primary-blue: #8cb4ff;
     --text-primary-yellow: #c7b700;
+    color-scheme: dark;
   }
 }
 
